# hollowfoot

./: .coveragerc  .flake8  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml
conda-recipe/: meta.yaml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst
src/hollowfoot/: __init__.py  _version.py  analysis.py  base_analysis.py  group.py  operation.py  readers.py  xafs_analysis.py  xdi.py
tests/: example.xdi  test_analysis.py  test_readers.py  test_xafs_analysis.py  test_xdi.py
tests/data/: Ni-foil-EXAFS.0002
